--- a/src/components/sidebar/control.module.scss
+++ b/src/components/sidebar/control.module.scss
@@ -27,6 +27,9 @@
   @media screen and (max-width: 1550px) {
     margin-top: -2rem;
   }
+  @media screen and (max-width: 1100px) {
+    margin-top: 0;
+  }
   //select {
   //  background-color: #3a3f46;
   //  color: #ffffff;
