--- a/src/components/categories/categories.module.scss
+++ b/src/components/categories/categories.module.scss
@@ -38,7 +38,7 @@
 			padding: .5em 1em;
 			color: #ffffff;
 			font-family: 'Montserrat', sans-serif;
-			font-size: 21px;
+			font-size: 1vw;
 			font-weight: 400;
 			border-radius: 0 1em;
 			background-color: #3a3f46;
@@ -47,6 +47,9 @@
 			justify-content: space-between;
 			line-height: 1.4em;
 			transition: .3s;
+			@media screen and (max-width: 1100px) {
+				font-size: 1em;
+			}
 			span {
 				font-weight: 700;
 			}
