--- a/src/components/chat/chat.module.scss
+++ b/src/components/chat/chat.module.scss
@@ -55,11 +55,9 @@ Chat
 --------------------*/
 .chat {
   @include center;
-  //width: 300px;
-  //height: 80vh;
   margin: 0 auto;
-  width: 26em;
-  max-width: 100vw;
+  max-width: 26em;
+  width: 100%;
   height: 40em;
   max-height: 100vh;
   z-index: 2;
