--- a/src/components/comparison/comparison.module.scss
+++ b/src/components/comparison/comparison.module.scss
@@ -18,8 +18,11 @@ $shadow: 0 .5rem 1rem rgba(0,0,0,.1)!important;
   padding: .7em 2em;
   text-align: center;
   color: #ffffff;
-  font-size: 21px;
+  font-size: 1vw;
   font-weight: 700;
+  @media screen and (max-width: 1100px) {
+    font-size: 1em;
+  }
 }
 
 .offers_list_sort select {
@@ -98,20 +101,26 @@ $shadow: 0 .5rem 1rem rgba(0,0,0,.1)!important;
     color: #ffffff;
     font-family: "Montserrat", sans-serif;
     text-decoration: none;
-    font-size: 17px;
+    font-size: 1.3vw;
     font-weight: 700;
+    @media screen and (max-width: 1100px) {
+      font-size: 1em;
+    }
   }
   p {
     min-height: 7em;
     overflow: hidden;
     position: relative;
-    font-size: 17px;
+    font-size: 1.3vw;
     font-weight: 400;
     line-height: 1.4em;
+    @media screen and (max-width: 1100px) {
+      font-size: 1em;
+    }
   }
   .user_block {
     display: grid;
-    grid-template-columns: 1fr 3fr;
+    grid-template-columns: 1fr 4fr;
     align-items: center;
     .elips {
       grid-row: span 2;
@@ -132,14 +141,20 @@ $shadow: 0 .5rem 1rem rgba(0,0,0,.1)!important;
     .user_name {
       color: #ffffff;
       font-family: "Montserrat", sans-serif;
-      font-size: 17px;
+      font-size: 1.3vw;
       font-weight: 700;
+      @media screen and (max-width: 1100px) {
+        font-size: 1em;
+      }
     }
     .location {
       svg {
         font-size: 1.3em;
         color: #fff;
         margin-right: 0.5em;
+        @media screen and (max-width: 1100px) {
+          font-size: 1em;
+        }
       }
     }
   }
@@ -159,22 +174,28 @@ $shadow: 0 .5rem 1rem rgba(0,0,0,.1)!important;
   p {
     white-space: nowrap;
     color: #79b972;
-    font-size: 21px;
+    font-size: 1vw;
     font-weight: 900;
     text-transform: uppercase;
     margin: 0;
+    @media screen and (max-width: 1100px) {
+      font-size: 1em;
+    }
   }
   .price {
     color: #ffffff;
     //font-size: 34px;
     font-weight: 700;
-    font-size: 21px;
+    font-size: 1vw;
     align-self: center;
+    @media screen and (max-width: 1100px) {
+      font-size: 1em;
+    }
   }
   .open {
     color: #ffffff;
     width: 100%;
-    font-size: 17px;
+    font-size: 1.3vw;
     font-weight: 700;
     border-radius: 0.6em;
     background-color: #3a3f46;
@@ -185,6 +206,9 @@ $shadow: 0 .5rem 1rem rgba(0,0,0,.1)!important;
     transition: 0.3s;
     height: 2.7em;
     align-self: end;
+    @media screen and (max-width: 1100px) {
+      font-size: 1em;
+    }
     a {
       width: 100%;
       color: #ffffff;
@@ -242,8 +266,11 @@ $shadow: 0 .5rem 1rem rgba(0,0,0,.1)!important;
   background-color: #3a3f46;
   align-items: center;
   color: #ffffff;
-  font-size: 21px;
+  font-size: 1vw;
   font-weight: 700;
+  @media screen and (max-width: 1100px) {
+    font-size: 1em;
+  }
 }
 .card_footer_content {
   height: calc(100% - 7px);
@@ -266,6 +293,9 @@ $shadow: 0 .5rem 1rem rgba(0,0,0,.1)!important;
     cursor: pointer;
     transition: 0.3s;
     user-select: none;
+    @media screen and (max-width: 1100px) {
+      font-size: 1em;
+    }
     img {
       height: 1.5em;
       margin-right: 1em;
@@ -277,6 +307,9 @@ $shadow: 0 .5rem 1rem rgba(0,0,0,.1)!important;
       font-size: 1.6em;
       line-height: 1em;
       margin-right: 0.3em;
+      @media screen and (max-width: 1100px) {
+        font-size: 1em;
+      }
     }
     &:nth-child(2) {
       margin-left: 2em;
@@ -308,6 +341,9 @@ $shadow: 0 .5rem 1rem rgba(0,0,0,.1)!important;
     padding: 0.3em 0.7em;
     border-radius: 0.5em 0 0.5em 0;
     position: relative;
+    @media screen and (max-width: 1100px) {
+      font-size: 1em;
+    }
   }
 }
 
