--- a/src/components/desire/user.module.scss
+++ b/src/components/desire/user.module.scss
@@ -63,7 +63,7 @@ $shadow: 0 .5rem 1rem rgba(0,0,0,.1)!important;
   .status {
     text-align: end;
     color: #79b972;
-    font-size: 17px;
+    font-size: 1.3vw;
     font-weight: 700;
     height: 1em;
   }
@@ -105,7 +105,7 @@ $shadow: 0 .5rem 1rem rgba(0,0,0,.1)!important;
     align-items: center;
     justify-content: center;
     margin-top: 0em;
-    font-size: 17px;
+    font-size: 1.3vw;
     font-weight: 700;
   }
   .links_title {
@@ -121,7 +121,7 @@ $shadow: 0 .5rem 1rem rgba(0,0,0,.1)!important;
     padding: 1em 0;
     a {
       color: #ffffff;
-      font-size: 17px;
+      font-size: 1.3vw;
       font-weight: 400;
       padding: .5em 1.5em;
       transition: .3s;
