--- a/src/components/favorites/fav.module.scss
+++ b/src/components/favorites/fav.module.scss
@@ -25,8 +25,12 @@ $shadow: 0 .5rem 1rem rgba(0,0,0,.1)!important;
 		padding: .7em 1.5em;
 		display: inline-block;
 		width: fit-content;
-		font-size: 20px;
+		font-size: 1.2vw;
 		font-weight: 700;
+		@media screen and (max-width: 1100px) {
+			font-size: 1em;
+		}
+
 		&:nth-child(1) {
 			border-right: 1px solid #3a3f46;
 			border-radius: 0 0 0 1em;
@@ -38,8 +42,23 @@ $shadow: 0 .5rem 1rem rgba(0,0,0,.1)!important;
 			background: linear-gradient(to top, #a2693c 0%, #d2a980 100%);
 		}
 	}
-	@media screen and (max-width: 768px) {
+	@media screen and (max-width: 1500px) {
 		grid-auto-flow: row;
+		.posts_toggler {
+			width: 100%;
+			display: block;
+			&:nth-child(1) {
+				border-radius: 0 1em 0 0;
+			}
+			&:nth-child(2) {
+				border-radius: 0 0 0 1em;
+			}
+		}
+	}
+	@media screen and (max-width: 767px) {
+		display: grid;
+		gap: 1em;
+		justify-content: center;
 	}
 }
 
@@ -112,6 +131,7 @@ $shadow: 0 .5rem 1rem rgba(0,0,0,.1)!important;
 }
 
 .card_image {
+	background-color: #2f343a;
 	grid-row: span 2;
 	position: relative;
 	overflow: hidden;
@@ -166,29 +186,35 @@ $shadow: 0 .5rem 1rem rgba(0,0,0,.1)!important;
 		color: #ffffff;
 		font-family: "Montserrat", sans-serif;
 		text-decoration: none;
-		font-size: 17px;
+		font-size: 1.3vw;
 		font-weight: 700;
+		@media screen and (max-width: 1100px) {
+			font-size: 1em;
+		}
 	}
 	p {
 		height: 8em;
 		overflow: hidden;
 		position: relative;
-		font-size: 17px;
+		font-size: 1.3vw;
 		font-weight: 400;
 		line-height: 1.4em;
+		@media screen and (max-width: 1100px) {
+			font-size: 1em;
+		}
 		&:after {
 			content: '';
 			position: absolute;
 			bottom: 0;
 			width: 100%;
-			background: linear-gradient(to bottom, transparent, #3a3f46);
+			background: linear-gradient(to bottom, transparent, #373b42);
 			display: block;
 			height: 2em;
 		}
 	}
 	.user_block {
 		display: grid;
-		grid-template-columns: 1fr 3fr;
+		grid-template-columns: 1fr 4fr;
 		align-items: center;
 		.elips {
 			grid-row: span 2;
@@ -209,14 +235,20 @@ $shadow: 0 .5rem 1rem rgba(0,0,0,.1)!important;
 		.user_name {
 			color: #ffffff;
 			font-family: "Montserrat", sans-serif;
-			font-size: 17px;
+			font-size: 1.3vw;
 			font-weight: 700;
+			@media screen and (max-width: 1100px) {
+				font-size: 1em;
+			}
 		}
 		.location {
 			svg {
 				font-size: 1.3em;
 				color: #fff;
 				margin-right: 0.5em;
+				@media screen and (max-width: 1100px) {
+					font-size: 1em;
+				}
 			}
 		}
 	}
@@ -236,22 +268,28 @@ $shadow: 0 .5rem 1rem rgba(0,0,0,.1)!important;
 	p {
 		white-space: nowrap;
 		color: #79b972;
-		font-size: 21px;
+		font-size: 1vw;
 		font-weight: 900;
 		text-transform: uppercase;
 		margin: 0;
+		@media screen and (max-width: 1100px) {
+			font-size: 1em;
+		}
 	}
 	.price {
 		color: #ffffff;
 		//font-size: 34px;
 		font-weight: 700;
-		font-size: 21px;
+		font-size: 1vw;
 		align-self: center;
+		@media screen and (max-width: 1100px) {
+			font-size: 1em;
+		}
 	}
 	.open {
 		color: #ffffff;
 		width: 100%;
-		font-size: 17px;
+		font-size: 1.3vw;
 		font-weight: 700;
 		border-radius: 0.6em;
 		background-color: #3a3f46;
@@ -262,6 +300,9 @@ $shadow: 0 .5rem 1rem rgba(0,0,0,.1)!important;
 		transition: 0.3s;
 		height: 2.7em;
 		align-self: end;
+		@media screen and (max-width: 1100px) {
+			font-size: 1em;
+		}
 		a {
 			width: 100%;
 			color: #ffffff;
@@ -319,7 +360,7 @@ $shadow: 0 .5rem 1rem rgba(0,0,0,.1)!important;
 	background-color: #3a3f46;
 	align-items: center;
 	color: #ffffff;
-	font-size: 21px;
+	font-size: 1vw;
 	font-weight: 700;
 }
 .card_footer_content {
@@ -340,6 +381,9 @@ $shadow: 0 .5rem 1rem rgba(0,0,0,.1)!important;
 		cursor: pointer;
 		transition: .3s;
 		user-select: none;
+		@media screen and (max-width: 1100px) {
+			font-size: 1em;
+		}
 		img {
 			height: 1.5em;
 			margin-right: 1em;
@@ -350,6 +394,9 @@ $shadow: 0 .5rem 1rem rgba(0,0,0,.1)!important;
 			font-size: 1.6em;
 			line-height: 1em;
 			margin-right: .3em;
+			@media screen and (max-width: 1100px) {
+				font-size: 1em;
+			}
 		}
 		&:nth-child(2) {
 			margin-left: 2em;
@@ -381,6 +428,9 @@ $shadow: 0 .5rem 1rem rgba(0,0,0,.1)!important;
 		padding: 0.3em 0.7em;
 		border-radius: 0.5em 0 0.5em 0;
 		position: relative;
+		@media screen and (max-width: 1100px) {
+			font-size: 1em;
+		}
 	}
 }
 
