--- a/src/components/main-list/offers-list.module.scss
+++ b/src/components/main-list/offers-list.module.scss
@@ -20,7 +20,7 @@
     list-style: none;
     display: grid;
     grid-template-columns: 24% 24% 24% 24%;
-    grid-column-gap: 1.3%;
+    grid-column-gap: 1em;
     grid-row-gap: 2em;
     @media screen and (max-width: 1850px) {
       grid-template-columns: 1fr 1fr 1fr;
@@ -75,12 +75,12 @@
   .menu {
     display: grid;
     grid-template-columns: 1fr 1fr 1fr;
-    gap: 10px;
+    gap: 8px;
     padding-right: 0;
     i {
       display: inline-block;
-      width: 5px;
-      height: 5px;
+      width: 4px;
+      height: 4px;
       background-color: #ffffff;
       border-radius: 50%;
       transition: 0.3s;
@@ -90,11 +90,11 @@
         transition: 0.3s;
 
         &:nth-child(1) {
-          transform: translate(15px, -10px);
+          transform: translate(12px, -10px);
         }
 
         &:nth-child(3) {
-          transform: translate(-15px, 10px);
+          transform: translate(-12px, 10px);
         }
       }
     }
@@ -131,8 +131,11 @@
     a {
       color: #ffffff;
       font-family: "Montserrat", sans-serif;
-      font-size: 17px;
+      font-size: 1.3vw;
       font-weight: 700;
+      @media screen and (max-width: 1100px) {
+        font-size: 1em;
+      }
     }
   }
 }
@@ -140,10 +143,16 @@
   white-space: nowrap;
   color: #ffffff;
   font-family: "Montserrat", sans-serif;
-  font-size: 21px;
+  font-size: 1vw;
   font-weight: 700;
+  @media screen and (max-width: 1100px) {
+    font-size: 1em;
+  }
   span {
-    font-size: 29px;
+    font-size: 1.5vw;
+    @media screen and (max-width: 1100px) {
+      font-size: 1em;
+    }
   }
 }
 
@@ -166,6 +175,9 @@
     font-size: 22px;
     font-weight: 700;
     padding-left: 0.5em;
+    @media screen and (max-width: 1100px) {
+      font-size: 1em;
+    }
   }
 }
 
