--- a/src/components/my-offers/offers.module.scss
+++ b/src/components/my-offers/offers.module.scss
@@ -18,8 +18,11 @@ $shadow: 0 .5rem 1rem rgba(0,0,0,.1)!important;
 	padding: .7em 2em;
 	text-align: center;
 	color: #ffffff;
-	font-size: 21px;
+	font-size: 1vw;
 	font-weight: 700;
+	@media screen and (max-width: 1100px) {
+		font-size: 1em;
+	}
 }
 
 .offers_list_sort {
@@ -106,20 +109,23 @@ $shadow: 0 .5rem 1rem rgba(0,0,0,.1)!important;
 		color: #ffffff;
 		font-family: "Montserrat", sans-serif;
 		text-decoration: none;
-		font-size: 17px;
+		font-size: 1.3vw;
 		font-weight: 700;
 	}
 	p {
 		min-height: 7em;
 		overflow: hidden;
 		position: relative;
-		font-size: 17px;
+		font-size: 1.3vw;
 		font-weight: 400;
 		line-height: 1.4em;
+		@media screen and (max-width: 1100px) {
+			font-size: 1em;
+		}
 	}
 	.user_block {
 		display: grid;
-		grid-template-columns: 1fr 3fr;
+		grid-template-columns: 1fr 4fr;
 		align-items: center;
 		.elips {
 			grid-row: span 2;
@@ -140,14 +146,20 @@ $shadow: 0 .5rem 1rem rgba(0,0,0,.1)!important;
 		.user_name {
 			color: #ffffff;
 			font-family: "Montserrat", sans-serif;
-			font-size: 17px;
+			font-size: 1.3vw;
 			font-weight: 700;
+			@media screen and (max-width: 1100px) {
+				font-size: 1em;
+			}
 		}
 		.location {
 			svg {
 				font-size: 1.3em;
 				color: #fff;
 				margin-right: 0.5em;
+				@media screen and (max-width: 1100px) {
+					font-size: 1em;
+				}
 			}
 		}
 	}
@@ -167,7 +179,7 @@ $shadow: 0 .5rem 1rem rgba(0,0,0,.1)!important;
 	p {
 		white-space: nowrap;
 		color: #79b972;
-		font-size: 21px;
+		font-size: 1vw;
 		font-weight: 900;
 		text-transform: uppercase;
 		margin: 0;
@@ -176,8 +188,11 @@ $shadow: 0 .5rem 1rem rgba(0,0,0,.1)!important;
 		color: #ffffff;
 		//font-size: 34px;
 		font-weight: 700;
-		font-size: 21px;
+		font-size: 1vw;
 		align-self: center;
+		@media screen and (max-width: 1100px) {
+			font-size: 1em;
+		}
 	}
 	.offer_btn {
 		color: #ffffff;
@@ -193,6 +208,9 @@ $shadow: 0 .5rem 1rem rgba(0,0,0,.1)!important;
 		transition: 0.3s;
 		height: 2.3em;
 		align-self: end;
+		@media screen and (max-width: 1100px) {
+			font-size: 1em;
+		}
 		a {
 			width: 100%;
 			color: #ffffff;
@@ -250,7 +268,7 @@ $shadow: 0 .5rem 1rem rgba(0,0,0,.1)!important;
 	background-color: #3a3f46;
 	align-items: center;
 	color: #ffffff;
-	font-size: 21px;
+	font-size: 1vw;
 	font-weight: 700;
 }
 .card_footer_content {
@@ -271,6 +289,9 @@ $shadow: 0 .5rem 1rem rgba(0,0,0,.1)!important;
 		cursor: pointer;
 		transition: .3s;
 		user-select: none;
+		@media screen and (max-width: 1100px) {
+			font-size: 1em;
+		}
 		img {
 			height: 1.5em;
 			margin-right: 1em;
@@ -281,6 +302,9 @@ $shadow: 0 .5rem 1rem rgba(0,0,0,.1)!important;
 			font-size: 1.6em;
 			line-height: 1em;
 			margin-right: .3em;
+			@media screen and (max-width: 1100px) {
+				font-size: 1em;
+			}
 		}
 		&:nth-child(2) {
 			margin-left: 2em;
@@ -312,6 +336,9 @@ $shadow: 0 .5rem 1rem rgba(0,0,0,.1)!important;
 		padding: 0.3em 0.7em;
 		border-radius: 0.5em 0 0.5em 0;
 		position: relative;
+		@media screen and (max-width: 1100px) {
+			font-size: 1em;
+		}
 	}
 }
 
