--- a/src/components/sidebar/sidebar.module.scss
+++ b/src/components/sidebar/sidebar.module.scss
@@ -36,6 +36,12 @@ $shadow: 0 .5rem 1rem rgba(0,0,0,.1)!important;
   display: grid;
   grid-template-columns: 4fr 7fr;
   align-items: center;
+  @media screen and (max-width: 1100px) {
+    grid-template-columns: 1fr;
+    justify-items: center;
+    gap: 1em;
+    padding: 1em 0;
+  }
 }
 .user_ava {
   z-index: 1;
@@ -80,8 +86,11 @@ $shadow: 0 .5rem 1rem rgba(0,0,0,.1)!important;
     text-align: center;
     color: #ffffff;
     font-family: "Montserrat", sans-serif;
-    font-size: 32px;
+    font-size: 1.5vw;
     font-weight: 700;
+    @media screen and (max-width: 1100px) {
+      font-size: 1.5em;
+    }
   }
   .user_rating {
     display: inline-block;
