--- a/src/components/update-offer/update-offer.module.scss
+++ b/src/components/update-offer/update-offer.module.scss
@@ -17,7 +17,7 @@ $shadow: 0 .5rem 1rem rgba(0,0,0,.1)!important;
 	padding: .7em 2em;
 	text-align: center;
 	color: #ffffff;
-	font-size: 21px;
+	font-size: 1vw;
 	font-weight: 700;
 }
 
