--- a/src/components/categories/categories.module.scss
+++ b/src/components/categories/categories.module.scss
@@ -1,61 +1,65 @@
 @import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@400;900&display=swap");
 
 .categories {
-	select {
-		display: none;
-		background-color: #3a3f46;
-		color: #ffffff;
-		border: none;
-		&:focus {
-			background-color: #3a3f46;
-			color: #ffffff;
-		}
-		@media screen and (max-width: 768px) {
-			display: block;
-		}
-	}
-	ul {
-		padding: 2.7em 0;
-		list-style: none;
-		margin: 0;
-		display: grid;
-		grid-template-columns: repeat(4, 1fr);
-		grid-column-gap: 1.2em;
-		grid-row-gap: .5em;
-		@media screen and (max-width: 1700px) {
-			grid-template-columns: repeat(3, 1fr);
-		}
-		@media screen and (max-width: 850px) {
-			grid-template-columns: repeat(2, 1fr);
-		}
-		@media screen and (max-width: 768px) {
-			display: none;
-		}
-		li {
-			cursor: pointer;
-			min-height: 3.5em;
-			height: 100%;
-			padding: .5em 1em;
-			color: #ffffff;
-			font-family: 'Montserrat', sans-serif;
-			font-size: 1vw;
-			font-weight: 400;
-			border-radius: 0 1em;
-			background-color: #3a3f46;
-			display: flex;
-			align-items: center;
-			justify-content: space-between;
-			line-height: 1.4em;
-			transition: .3s;
-			@media screen and (max-width: 1100px) {
-				font-size: 1em;
-			}
-			span {
-				font-weight: 700;
-			}
-			&:hover {
-				background-color: #222529;
-			}
-		}
-	}
+  select {
+    display: none;
+    background-color: #3a3f46;
+    color: #ffffff;
+    border: none;
+    &:focus {
+      background-color: #3a3f46;
+      color: #ffffff;
+    }
+    @media screen and (max-width: 768px) {
+      display: block;
+    }
+  }
+  ul {
+    padding: 2.7em 0;
+    list-style: none;
+    margin: 0;
+    display: grid;
+    grid-template-columns: repeat(4, 1fr);
+    grid-column-gap: 1.2em;
+    grid-row-gap: 0.5em;
+    @media screen and (max-width: 1700px) {
+      grid-template-columns: repeat(3, 1fr);
+    }
+    @media screen and (max-width: 850px) {
+      grid-template-columns: repeat(2, 1fr);
+    }
+    @media screen and (max-width: 768px) {
+      display: none;
+    }
+    li {
+      cursor: pointer;
+      min-height: 3.5em;
+      height: 100%;
+      padding: 0.5em 1em;
+      color: #ffffff;
+      font-family: "Montserrat", sans-serif;
+      font-size: 1vw;
+      font-weight: 400;
+      border-radius: 0 1em;
+      background-color: #3a3f46;
+      display: flex;
+      align-items: center;
+      justify-content: space-between;
+      line-height: 1.4em;
+      transition: 0.3s;
+      @media screen and (max-width: 1100px) {
+        font-size: 1em;
+      }
+      span {
+        font-weight: 700;
+        transition: .3s;
+      }
+      &:hover {
+        background-color: #222529;
+        span {
+          transform: rotate(90deg);
+        }
+      }
+    }
+  }
 }
