--- a/src/components/desire/desire.module.scss
+++ b/src/components/desire/desire.module.scss
@@ -89,21 +89,25 @@ $shadow: 0 .5rem 1rem rgba(0,0,0,.1)!important;
 	display: grid;
 	position: absolute;
 	border-radius: .3em;
+	overflow: hidden;
 	top: 50%;
 	right: 3em;
-	background-color: #2e3137;
 	transform: translate(0, -50%);
-	span {
-		color: #ffffff;
+	.toast_item {
+		background-color: #3a3f46;
 		font-weight: 600;
 		padding: .5em 1.5em;
 		transition: .3s;
-		a {
+		cursor: pointer;
+		a, span {
 			text-decoration: none;
 			color: #fff;
 		}
 		&:hover {
-			background-color: #3a3f46;
+			a, span {
+				color: #000;
+			}
+			background-color: #fff;
 		}
 	}
 }
@@ -113,6 +117,7 @@ $shadow: 0 .5rem 1rem rgba(0,0,0,.1)!important;
 	background-color: #3a3f46;
 	padding: 1.5em;
 	display: grid;
+	grid-template-rows: 4em min-content min-content auto;
 	gap: .8em;
 	p {
 		text-align: center;
