user avatar placeholder

--- a/src/components/cabinet/update.module.scss
+++ b/src/components/cabinet/update.module.scss
@@ -1,3 +1,11 @@
+.update_profile {
+  form {
+    input, select {
+      background-color: #3a3f46;
+      color: #fff;
+    }
+  }
+}
 
 .user_avatar {
   height: 10em;
