--- a/src/components/sidebar/sidebar.module.scss
+++ b/src/components/sidebar/sidebar.module.scss
@@ -88,6 +88,9 @@ $shadow: 0 .5rem 1rem rgba(0,0,0,.1)!important;
     font-family: "Montserrat", sans-serif;
     font-size: 1.5vw;
     font-weight: 700;
+    max-width: 100%;
+    overflow: hidden;
+    padding-left: .5em;
     @media screen and (max-width: 1100px) {
       font-size: 1.5em;
     }
