--- a/src/components/main-list/offers-list.module.scss
+++ b/src/components/main-list/offers-list.module.scss
@@ -19,18 +19,19 @@
     padding: 0;
     list-style: none;
     display: grid;
-    grid-template-columns: 24% 24% 24% 24%;
+    //grid-template-columns: 24% 24% 24% 24%;
+    grid-template-columns: repeat(auto-fill, minmax(15em, 1fr));
     grid-column-gap: 1em;
     grid-row-gap: 2em;
-    @media screen and (max-width: 1850px) {
-      grid-template-columns: 1fr 1fr 1fr;
-    }
-    @media screen and (max-width: 1550px) {
-      grid-template-columns: 1fr 1fr;
-    }
-    @media screen and (max-width: 768px) {
-      grid-template-columns: 1fr;
-    }
+    //@media screen and (max-width: 1850px) {
+    //  grid-template-columns: 1fr 1fr 1fr;
+    //}
+    //@media screen and (max-width: 1550px) {
+    //  grid-template-columns: 1fr 1fr;
+    //}
+    //@media screen and (max-width: 768px) {
+    //  grid-template-columns: 1fr;
+    //}
   }
 }
 
@@ -108,7 +109,7 @@
     top: 50%;
     left: 50%;
     transform: translate(-50%, -45%);
-    width: 100%;
+    max-width: 110%;
   }
 }
 .card_info {
@@ -182,7 +183,7 @@
   height: 4.3em;
   background-color: #383b42;
   border-radius: 50%;
-  transform: translateY(-3em);
+  transform: translateY(-2.5em);
   overflow: hidden;
   display: flex;
   justify-content: center;
@@ -193,7 +194,7 @@
   position: absolute;
   top: 0.5em;
   left: 50%;
-  transform: translateX(-20%);
+  transform: translateX(-35%);
   z-index: 10;
   background-color: #404854;
   border-radius: 0.3em;
