--- a/src/components/cabinet/verify.module.scss
+++ b/src/components/cabinet/verify.module.scss
@@ -3,3 +3,49 @@
   max-width: 100%;
   margin: 0 .5em;
 }
+
+.report {
+  position: absolute;
+  top: 0;
+  right: 0;
+  border: 2px solid #dc3545;
+  width: 2em;
+  height: 2em;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  border-radius: 50%;
+  cursor: pointer;
+  transition: .3s;
+  svg {
+    color: #dc3545;
+  }
+  & > span {
+    visibility: hidden;
+    transition: .3s;
+    width: 11.5em;
+    background-color: black;
+    color: #fff;
+    text-align: center;
+    padding: 5px 0;
+    border-radius: 6px;
+    position: absolute;
+    top: -1em;
+    left: -12em;
+    z-index: 1;
+    opacity: 0;
+  }
+  &:hover > span {
+    visibility: visible;
+    opacity: 1;
+  }
+}
+
+.veification_form {
+  display: grid;
+  margin-top: 2em;
+  input, select, input:disabled, select:disabled {
+    color: #fff;
+    background-color: #3a3f46;
+  }
+}
