--- a/src/pages/styles/global.scss
+++ b/src/pages/styles/global.scss
@@ -13,10 +13,13 @@ body {
   display: flex;
   min-height: 100vh;
   flex-direction: column;
-  box-shadow: 0 141px 141px 8px rgba(43, 47, 53, 0.8);
+  //box-shadow: 0 141px 141px 8px rgba(43, 47, 53, 0.8);
   width: 100%;
   background-image: linear-gradient(-225deg, #3a3f46 0%, #212429 99%, #212429 100%);
-  //background-repeat: no-repeat;
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center;
+  background-attachment: fixed;
   font-family: 'Montserrat', sans-serif;
 
   &::-webkit-scrollbar {
