--- a/src/components/main-list/desires-list.module.scss
+++ b/src/components/main-list/desires-list.module.scss
@@ -263,6 +263,7 @@
 }
 .card_price {
   white-space: nowrap;
+  //text-align: end;
   color: #ffffff;
   font-family: 'Montserrat', sans-serif;
   font-size: 1vw;
