--- a/src/components/sidebar/mob-sidebar.module.scss
+++ b/src/components/sidebar/mob-sidebar.module.scss
@@ -11,6 +11,12 @@
   width: 90vw;
   max-width: 30em;
   height: 100%;
+
+  .report_btn {
+    position: absolute;
+    top: 9em;
+    left: 4em;
+  }
 }
 
 .sidebar_toggler {
