--- a/src/components/cabinet/verify.module.scss
+++ b/src/components/cabinet/verify.module.scss
@@ -20,7 +20,7 @@
   svg {
     color: #dc3545;
   }
-  & > span {
+  & > .tooltiptext {
     visibility: hidden;
     transition: .3s;
     width: 11.5em;
@@ -31,11 +31,16 @@
     border-radius: 6px;
     position: absolute;
     top: -1em;
-    left: -12em;
     z-index: 1;
     opacity: 0;
+    &.left {
+      left: -12em;
+    }
+    &.right {
+      right: -12em;
+    }
   }
-  &:hover > span {
+  &:hover > .tooltiptext {
     visibility: visible;
     opacity: 1;
   }
