--- a/src/components/sidebar/sidebar.module.scss
+++ b/src/components/sidebar/sidebar.module.scss
@@ -12,6 +12,13 @@ $shadow: 0 .5rem 1rem rgba(0,0,0,.1)!important;
   border-radius: 1em;
   padding: 3rem 9%;
   overflow: hidden;
+  position: relative;
+
+  .report_btn {
+    position: absolute;
+    top: 2em;
+    left: 4em;
+  }
 
   @media screen and (max-width: 1100px) {
     display: none;
