--- a/src/components/create-desire-lot/add-form.module.scss
+++ b/src/components/create-desire-lot/add-form.module.scss
@@ -34,6 +34,9 @@
 		color: #ffffff;
 		font-size: 1vw;
 		font-weight: 700;
+		@media screen and (max-width: 700px) {
+			font-size: 1em;
+		}
 	}
 
 	form {
