--- a/src/components/layout/layout.module.scss
+++ b/src/components/layout/layout.module.scss
@@ -11,8 +11,8 @@ $shadow: 0 .5rem 1rem rgba(0,0,0,.1)!important;
 	display: grid;
 	grid-template-rows: auto 1fr;
 	grid-template-columns: 2fr 5fr;
-	grid-column-gap: 2rem;
-	grid-row-gap: 1.5rem;
+	grid-column-gap: 2%;
+	grid-row-gap: 1.2rem;
 	padding: 10rem 1rem;
 	position: relative;
 	@media screen and (max-width: 1100px) {
