--- a/src/components/desire/desire.module.scss
+++ b/src/components/desire/desire.module.scss
@@ -63,7 +63,7 @@ $shadow: 0 .5rem 1rem rgba(0,0,0,.1)!important;
 	}
 	p {
 		word-break: break-word;
-		font-size: 1.3vw;
+		font-size: 1.1vw;
 		font-weight: 400;
 		min-height: 8em;
 		@media screen and (max-width: 1100px) {
@@ -168,7 +168,7 @@ $shadow: 0 .5rem 1rem rgba(0,0,0,.1)!important;
 			text-align: center;
 			border-radius: 1em;
 			background-color: #22262a;
-			font-size: 15px;
+			font-size: 1.1em;
 			font-weight: 700;
 		}
 	}
