--- a/src/components/main-list/desires-list.module.scss
+++ b/src/components/main-list/desires-list.module.scss
@@ -250,10 +250,12 @@
     height: 2em;
     margin-bottom: 0;
     width: 75%;
+    line-height: 0.9em;
+    overflow: hidden;
     a {
       color: #ffffff;
       font-family: 'Montserrat', sans-serif;
-      font-size: 1.3vw;
+      font-size: 1.05vw;
       font-weight: 700;
       @media screen and (max-width: 1100px) {
         font-size: 1em;
