--- a/src/components/main-list/offers-list.module.scss
+++ b/src/components/main-list/offers-list.module.scss
@@ -121,11 +121,13 @@
   h5 {
     width: 75%;
     height: 2em;
+    line-height: .9em;
     margin: .5em 0 0 0;
+    overflow: hidden;
     a {
       color: #ffffff;
       font-family: "Montserrat", sans-serif;
-      font-size: 1.3vw;
+      font-size: 1.05vw;
       font-weight: 700;
       @media screen and (max-width: 1100px) {
         font-size: 1em;
